# KMC

./: .gitignore  CMakeLists.txt  KMC.vcxproj  KMC.vcxproj.filters  Particle.h  README.md  Site.h  runKMC.bash
Debug/: kmcrun.new.obj.enc  vc142.idb
Debug/KMC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
include/: EnumNames.h  KmcRun.h  Logger.h  Neighbour.h  Neighbourlist.h  NextEventList.h  OutputManager.h  PBC.h  PType.h  Particle.h  RandomEngine.h  RateEngine.h  RateEngine2.h  RateOptions.h  SimulationOptions.h  SingleRun.h  Site.h  TestCase.h  Topology.h
input/: ctbinding.xml  longNB_ev_medium.txt  longNB_ev_smallSystem.txt  modelParameters.txt  natural.xml  natural_allSinglet.xml  natural_state.xml  nbList.txt  options.xml  reorganisation.xml  shifted.xml  shortNB_ev_medium.txt  shortNB_ev_smallSystem.txt  sites.txt  sitesAndEnergies.txt  sitesAndEnergies_correct.txt  sitesAndEnergies_correct_med.txt  sitesAndEnergies_correct_shifted.txt  sitesAndEnergies_correct_shifted2.txt  sitesAndEnergies_correct_shifted_new.txt  sitesAndEnergies_correct_small.txt
output/: occ.txt  siteOcc_ 12010.txt  siteOcc_012010.txt  siteOcc_012411.txt  siteOcc_012413.txt  siteOcc_012415.txt  siteOcc_0125 9.txt  siteOcc_012511.txt  siteOcc_012512.txt  siteOcc_01271042.txt  siteOcc_01271043.txt  siteOcc_01271045.txt  siteOcc_01271119.txt  siteOcc_01271143.txt
src/: KmcRun.cpp  Neighbourlist.cpp  NextEventList.cpp  OutputManager.cpp  OutputManger.cpp  RandomEngine.cpp  RateEngine.cpp  RateEngine2.cpp  SingleRun.cpp  Site.cpp  Topology.cpp  main.cpp  makefile
(+9 files in other folders)
